Fix background color on mobile

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-report.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-report.scss
@@ -173,8 +173,8 @@
 
 .sfgov-toc-sticky,
 .sfgov-toc-drawer {
-  background: $c-grey-1;
   transition: all ease-in-out 0.25s;
+  background: $c-grey-1;
 }
 
 .sfgov-toc-sticky {
@@ -186,6 +186,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  background: $c-white;
 
   &.show {
     opacity: 1;
@@ -193,6 +194,7 @@
   }
 
   @media screen and (min-width: $medium-screen) {
+    background: $c-grey-1;
     position: static;
     opacity: 1;
     visibility: visible;
